code and documentation improvements
